namespaces/live.cloud-platform.service.justice.gov.uk/laa-cwa-feature-tests-uat/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: "laa-cwa-feature-tests-uat"
  labels:
    cloud-platform.justice.gov.uk/is-production: "false"
    cloud-platform.justice.gov.uk/environment-name: "uat"
    pod-security.kubernetes.io/enforce: restricted
  annotations:
    cloud-platform.justice.gov.uk/business-unit: "LAA"
    cloud-platform.justice.gov.uk/slack-channel: "laa-pcuam"
    cloud-platform.justice.gov.uk/application: "laa-cwa-feature-tests"
    cloud-platform.justice.gov.uk/owner: "laa-pcuam: laa-pcuam-support@digital.justice.gov.uk"
    cloud-platform.justice.gov.uk/source-code: "https://github.com/ministryofjustice/laa-cwa-feature-tests"
    cloud-platform.justice.gov.uk/team-name: "laa-pcuam"
    cloud-platform.justice.gov.uk/review-after: ""
